# gilded-rose

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  GildedRose.h  GildedRoseTests.cpp  GlidedRose.h  Item.h  ItemUpdater.h  main.cpp
